--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,106 +8,113 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Document</title>
 </head>
+
 <body>
-    <div class="card">
-        <div class="card__img">
-            <img src="thien.jpg" alt="">
+    <div class="team-container">
+        <h1>Our Team</h1>
+        <div class="cards">
+            <div class="card">
+                <div class="card__img">
+                    <img src="thien.jpg" alt="">
+                </div>
+                <h2>Hoang Thien</h2>
+                <p>Front-end Developer</p>
+                <div class="card__social">
+                    <a href="https://www.facebook.com/hoangthien.11103/" target="_blank" class="facebook">
+                        <i class='bx bxl-facebook'></i>
+                    </a>
+                    <a href="https://www.instagram.com/ht.teddy03/" target="_blank" class="ig">
+                        <i class='bx bxl-instagram'></i>
+                    </a>
+                    <a href="https://github.com/hoangthien1101" target="_blank" class="github">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
+                <button>Contact me</button>
+            </div>
+            <!-- --card -->
+            <div class="card">
+                <div class="card__img">
+                    <img src="quan.jpg" alt="">
+                </div>
+                <h2>Minh Quan</h2>
+                <p>Back-end Developer</p>
+                <div class="card__social">
+                    <a href="https://www.facebook.com/minhhquann1506" target="_blank" class="facebook">
+                        <i class='bx bxl-facebook'></i>
+                    </a>
+                    <a href="https://www.instagram.com/minhhquann2705/" target="_blank" class="ig">
+                        <i class='bx bxl-instagram'></i>
+                    </a>
+                    <a href="https://github.com/MinhhQuann1506" target="_blank" class="github">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
+                <button>Contact me</button>
+            </div>
+            <!-- --card -->
+            <div class="card">
+                <div class="card__img">
+                    <img src="nhan.jpg" alt="">
+                </div>
+                <h2>Thanh Nhan</h2>
+                <p>Back-end Developer</p>
+                <div class="card__social">
+                    <a href="https://www.facebook.com/nhando0520" target="_blank" class="facebook">
+                        <i class='bx bxl-facebook'></i>
+                    </a>
+                    <a href="https://www.instagram.com/_do_nhann_/" target="_blank" class="ig">
+                        <i class='bx bxl-instagram'></i>
+                    </a>
+                    <a href="https://github.com/donhan0520" target="_blank" class="github">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
+                <button>Contact me</button>
+            </div>
+            <!-- --card -->
+            <div class="card">
+                <div class="card__img">
+                    <img src="tai.jpg" alt="">
+                </div>
+                <h2>Trung Tai</h2>
+                <p>Data Analyst</p>
+                <div class="card__social">
+                    <a href="https://www.facebook.com/nq.trunqtaiii204" target="_blank" class="facebook">
+                        <i class='bx bxl-facebook'></i>
+                    </a>
+                    <a href="https://www.instagram.com/nq.trunqtaiii204/" target="_blank" class="ig">
+                        <i class='bx bxl-instagram'></i>
+                    </a>
+                    <a href="https://github.com/trungtai204" target="_blank" class="github">
+                        <i class='bx bxl-github'></i>
+                    </a>
+                </div>
+                <button>Contact me</button>
+            </div>
+            <!-- --card -->
+            <div class="card">
+                <div class="card__img">
+                    <img src="ly.jpg" alt="">
+                </div>
+                <h2>Cam Ly</h2>
+                <p>UI/UX Designer</p>
+                <div class="card__social">
+                    <a href="https://www.facebook.com/tranly0810" target="_blank" class="facebook">
+                        <i class='bx bxl-facebook'></i>
+                    </a>
+                    <a href="https://www.instagram.com/_clytran_/" target="_blank" class="ig">
+                        <i class='bx bxl-instagram'></i>
+                    </a>
+                    <!-- <a href="https://github.com/hoangthien1101" target="_blank" class="github">
+                    <i class='bx bxl-github'></i>
+                </a> -->
+                </div>
+                <button>Contact me</button>
+            </div>
         </div>
-        <h2>Hoang Thien</h2>
-        <p>Front-end Developer</p>
-        <div class="card__social">
-            <a href="https://www.facebook.com/hoangthien.11103/" target="_blank" class="facebook">
-                <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://www.instagram.com/ht.teddy03/" target="_blank" class="ig">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <a href="https://github.com/hoangthien1101" target="_blank" class="github">
-                <i class='bx bxl-github'></i>
-            </a>
-        </div>
-        <button>Contact me</button>
-    </div>
-    <!-- --card -->
-    <div class="card">
-        <div class="card__img">
-            <img src="quan.jpg" alt="">
-        </div>
-        <h2>Minh Quan</h2>
-        <p>Back-end Developer</p>
-        <div class="card__social">
-            <a href="https://www.facebook.com/minhhquann1506" target="_blank" class="facebook">
-                <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://www.instagram.com/minhhquann2705/" target="_blank" class="ig">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <a href="https://github.com/MinhhQuann1506" target="_blank" class="github">
-                <i class='bx bxl-github'></i>
-            </a>
-        </div>
-        <button>Contact me</button>
-    </div>
-    <!-- --card -->
-    <div class="card">
-        <div class="card__img">
-            <img src="nhan.jpg" alt="">
-        </div>
-        <h2>Thanh Nhan</h2>
-        <p>Back-end Developer</p>
-        <div class="card__social">
-            <a href="https://www.facebook.com/nhando0520" target="_blank" class="facebook">
-                <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://www.instagram.com/_do_nhann_/" target="_blank" class="ig">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <a href="https://github.com/donhan0520" target="_blank" class="github">
-                <i class='bx bxl-github'></i>
-            </a>
-        </div>
-        <button>Contact me</button>
-    </div>
-    <!-- --card -->
-    <div class="card">
-        <div class="card__img">
-            <img src="tai.jpg" alt="">
-        </div>
-        <h2>Trung Tai</h2>
-        <p>Data Analyst</p>
-        <div class="card__social">
-            <a href="https://www.facebook.com/nq.trunqtaiii204" target="_blank" class="facebook">
-                <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://www.instagram.com/nq.trunqtaiii204/" target="_blank" class="ig">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <a href="https://github.com/trungtai204" target="_blank" class="github">
-                <i class='bx bxl-github'></i>
-            </a>
-        </div>
-        <button>Contact me</button>
-    </div>
-    <!-- --card -->
-    <div class="card">
-        <div class="card__img">
-            <img src="ly.jpg" alt="">
-        </div>
-        <h2>Cam Ly</h2>
-        <p>UI/UX Designer</p>
-        <div class="card__social">
-            <a href="https://www.facebook.com/tranly0810" target="_blank" class="facebook">
-                <i class='bx bxl-facebook'></i>
-            </a>
-            <a href="https://www.instagram.com/_clytran_/" target="_blank" class="ig">
-                <i class='bx bxl-instagram'></i>
-            </a>
-            <!-- <a href="https://github.com/hoangthien1101" target="_blank" class="github">
-                <i class='bx bxl-github'></i>
-            </a> -->
-        </div>
-        <button>Contact me</button>
     </div>
     <!-- --card -->
 </body>
+
 </html>
